--- a/config.toml
+++ b/config.toml
@@ -7,8 +7,9 @@ languageCode = "en-us"
   # See the config.toml file from this documentation site to have an example.
   editURL = ""
   # Author of the site, will be used in meta information
-  author = ""
+  author = "PangPang"
   # Description of the site, will be used in meta information
   description = ""
   # Shows a checkmark for visited pages on the menu. Default to false
   showVisitedLinks = false
+  menu = [ "getting-started", "api" ]
