--- a/config.toml
+++ b/config.toml
@@ -12,4 +12,5 @@ languageCode = "en-us"
   description = ""
   # Shows a checkmark for visited pages on the menu. Default to false
   showVisitedLinks = false
+  disableSearch = true
   menu = [ "introduction", "getting-started", "api", "usecase", "error-code" ]
